src/objects/ExceptionLog__c.object
<CustomObject>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>ClassName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorDetails__c</fullName>
        <label>ErrorDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorLine__c</fullName>
        <label>ErrorLine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorType__c</fullName>
        <label>ErrorType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <label>MethodName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectValues__c</fullName>
        <label>ObjectValues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ExceptionLog</label>
    <nameField>
        <label>ExceptionLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExceptionLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>